react 라이브러리 추가. react dom render 샘플 추가.

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "react": "^0.14.0-beta3",
+    "react-dom": "^0.14.0-beta3"
   }
 }
